--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -4,8 +4,7 @@ on: [push, pull_request]
 
 jobs:
   cppcheck:
-    runs-on: Debian-latest
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -15,4 +14,4 @@ jobs:
           sudo apt-get install -y cmake build-essential ninja-build cppcheck
 
       - name: Run cppcheck
-        run: cppcheck --enable=all --inconclusive --quiet --error-exitcode=1 src/ include/
+        run: cppcheck --enable=all --inconclusive --quiet --error-exitcode=1 Core/Src/ Core/Inc/
