--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -14,4 +14,9 @@ jobs:
           sudo apt-get install -y cmake build-essential ninja-build cppcheck
 
       - name: Run cppcheck
-        run: cppcheck --enable=all --suppress=styleunusedFunction,unreadVariable,uninitvar --inconclusive --quiet --error-exitcode=1 Core/Src/ Core/Inc/
+        run: cppcheck --enable=all \
+          --suppress=style \
+          --suppress=unusedFunction \
+          --suppress=unreadVariable \
+          --suppress=uninitvar \
+          --inconclusive --quiet --error-exitcode=1 Core/Src/ Core/Inc/
