Feat: Able to flash into stm32, fixed some configs

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,12 @@
 /.settings/
 EWARM/
 
-.vscode/
+.vscode/settings.json
+.vscode/c_cpp_properties.json
+.vscode/*.log
+.env
+
+
 *.mxproject
 /build/
 /CMakeFiles/
