Fix: Update .gitignore to have launch and task config

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@
 *.project
 /.settings/
 EWARM/
-
-.vscode/
+.vscode/settings.json
+.vscode/c_cpp_properties.json
 *.mxproject
 /build/
 /CMakeFiles/
