--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,17 +21,16 @@ endif()
 # Set the project name
 set(CMAKE_PROJECT_NAME Canards)
 
-# Include toolchain file
-include("cmake/gcc-arm-none-eabi.cmake")
-
 # Enable compile command to ease indexing with e.g. clangd
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
-# Enable CMake support for ASM and C languages
-enable_language(C ASM)
+# Core project settings
+project(${CMAKE_PROJECT_NAME} C) # Specify main language here
+
+# Enable additional CMake support for ASM
+enable_language(ASM)
 
 # Core project settings
-project(${CMAKE_PROJECT_NAME})
 message("Build type: " ${CMAKE_BUILD_TYPE})
 
 # Enable hardware floating point 
@@ -41,6 +40,9 @@ add_link_options(${FPU_FLAGS})
 
 # Create an executable object type
 add_executable(${CMAKE_PROJECT_NAME})
+
+# add float support in printf lib
+target_link_options(Canards PRIVATE "-Wl,-u,_printf_float")
 
 # Add STM32CubeMX generated sources
 add_subdirectory(cmake/stm32cubemx)
@@ -53,13 +55,14 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
-    Core/Src/Drivers/BMI088/BMI088.c
+    Core/Src/Drivers/bmi088/bmi088.c
 )
 
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
         Core/Inc/Drivers
+        Core/Inc
     )
 
 # Add project symbols (macros)
