Feat: Added shell scripting and switched from ST-Link_gdb to OpenOCD

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,59 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Build & Debug Microcontroller - ST-Link",
+            "name": "Build & Debug (Make)",
             "cwd": "${workspaceFolder}",
             "type": "cortex-debug",
-            "executable": "${command:cmake.launchTargetPath}",
-            // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
-            // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
-            "request": "launch",
+            // fixed file path: "${workspaceFolder}/path/to/filename.elf"
+            "executable": "${workspaceFolder}/build/Debug/Canards.elf",
             "servertype": "stlink",
             "device": "STM32F446RETx", //MCU used
             "interface": "swd",
-            "serialNumber": "", //Set ST-Link ID if you use multiple at the same time
-            "runToEntryPoint": "main",
             "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F446.svd",
-            "v1": false, //Change it depending on ST Link version
-            "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "stm32cubeprogrammer": "${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
-            "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
-            "gdbPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",
-            "serverArgs": [
-                "-m",
-                "0",
+            "configFiles": [
+                "interface/stlink.cfg",
+                "target/stm32f4x.cfg"
             ],
-            "preLaunchTask": "Build + Flash"
-            /* If you use external loader, add additional arguments */
-            //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
+            "preLaunchTask": "Run Make"
         },
-        {
-            "name": "Attach to Microcontroller - ST-Link",
-            "cwd": "${workspaceFolder}",
-            "type": "cortex-debug",
-            "executable": "${command:cmake.launchTargetPath}",
-            // Let CMake extension decide executable: "${command:cmake.launchTargetPath}"
-            // Or fixed file path: "${workspaceFolder}/path/to/filename.elf"
-            "request": "attach",
-            "servertype": "stlink",
-            "device": "STM32F446RETx", //MCU used
-            "interface": "swd",
-            "serialNumber": "", //Set ST-Link ID if you use multiple at the same time
-            "runToEntryPoint": "main",
-            "svdFile": "${config:STM32VSCodeExtension.cubeCLT.path}/STMicroelectronics_CMSIS_SVD/STM32F446.svd",
-            "v1": false, //Change it depending on ST Link version
-            "serverpath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "stm32cubeprogrammer": "${config:STM32VSCodeExtension.cubeCLT.path}/STM32CubeProgrammer/bin",
-            "stlinkPath": "${config:STM32VSCodeExtension.cubeCLT.path}/STLink-gdb-server/bin/ST-LINK_gdbserver",
-            "armToolchainPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin",
-            "gdbPath": "${config:STM32VSCodeExtension.cubeCLT.path}/GNU-tools-for-STM32/bin/arm-none-eabi-gdb",
-            "serverArgs": [
-                "-m",
-                "0",
-            ],
-            /* If you use external loader, add additional arguments */
-            //"serverArgs": ["--extload", "path/to/ext/loader.stldr"],
-        }
     ]
 }
