Feat: Developed Linear Kalman Filter for altitude and velocity estimation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,13 +53,14 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
-    Core/Src/Drivers/ms5611/ms5611.c
+    Core/Src/Kalman/kalman.c
+    Core/Src/Kalman/math_utils.c
 )
 
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
-        Core/Inc/Drivers
+    Core/Inc/Kalman
     )
 
 # Add project symbols (macros)
